# ezytutors

./: Cargo.toml
docker-rust/: Cargo.toml  Dockerfile-basic  Dockerfile-lite
docker-rust/src/: main.rs
tutor-web-app-ssr/: Cargo.toml
tutor-web-app-ssr/dbsrcipts/: user.sql
tutor-web-app-ssr/src/: errors.rs  main.rs  model.rs  routes.rs  state.rs  store.rs
tutor-web-app-ssr/src/handler/: auth.rs  course.rs  mod.rs
tutor-web-service/: Cargo.toml  Dockerfile-tutor-webservice  docker-compose.yml
tutor-web-service/c12-data/: initdb.sql
tutor-web-service/dbscripts/: course.sql  tutor-course.sql
tutor-web-service/src/: errors.rs  main.rs  routes.rs  state.rs
tutor-web-service/src/handlers/: course.rs  general.rs  mod.rs  tutor.rs
tutor-web-service/src/models/: course.rs  mod.rs  tutor.rs
tutor-web-service/src/store/: course.rs  tutor.rs
