[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
tera = "1.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
awc = "3.5.1"

sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
] }
dotenvy = "0.15.7"
rust-argon2 = "2.1.0"
rand = "0.8.5"

[dev-dependencies]
actix-rt = "2.10.0"
