[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.10.0"

dotenvy = "0.15.7"

sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
] }

serde = { version = "1.0.210", features = ["derive"] }

chrono = { version = "0.4.38", features = ["serde"] }

openssl = { version = "0.10.68", features = ["vendored"] }
